--- a/site/plugins/hookLogger/composer.json
+++ b/site/plugins/hookLogger/composer.json
@@ -18,9 +18,11 @@
     },
     "require": {
         "getkirby/composer-installer": "^1.1",
-        "getkirby/cms": "^3"
+        "getkirby/cms": "^3.6"
     },
     "config": {
         "optimize-autoloader": true
-    }
+    },
+    "minimum-stability": "dev",
+    "prefer-stable": true
 }
