--- a/composer.json
+++ b/composer.json
@@ -29,6 +29,9 @@
     "replace": {
         "mauricerenck/tratschtante": "*"
     },
+    "suggests": {
+        "mauricerenck/komments": "1.3"
+    },
     "config": {
         "optimize-autoloader": true
     },
