--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,7 @@
     },
     "require": {
         "getkirby/composer-installer": "^1.1",
-        "php": ">=7.3.0 <8.1.0"
+        "php": ">=7.3.0"
     },
     "require-dev": {
         "getkirby/cms": "^3.6",
