--- a/composer.json
+++ b/composer.json
@@ -20,11 +20,12 @@
     },
     "require": {
         "getkirby/composer-installer": "^1.1",
-        "php": ">=7.3.0"
+        "php": ">=7.3.0",
+        "indieweb/mention-client": "^1.2"
     },
     "require-dev": {
         "getkirby/cms": "^3.6",
-        "phpunit/phpunit": "9.5"
+        "phpunit/phpunit": "^9.5"
     },
     "replace": {
         "mauricerenck/tratschtante": "*"
