--- a/composer.json
+++ b/composer.json
@@ -4,6 +4,7 @@
     "description": "Kirby Webmentions your plugins can subscribe to",
     "type": "kirby-plugin",
     "license": "MIT",
+    "homepage": "https://github.com/mauricerenck/indieConnector",
     "authors": [
         {
             "name": "Maurice Renck",
