--- a/composer.json
+++ b/composer.json
@@ -4,6 +4,7 @@
     "description": "Kirby Webmentions your plugins can subscribe to",
     "type": "kirby-plugin",
     "license": "MIT",
+    "homepage": "https://github.com/mauricerenck/indieConnector",
     "authors": [
         {
             "name": "Maurice Renck",
@@ -20,11 +21,12 @@
     },
     "require": {
         "getkirby/composer-installer": "^1.1",
-        "php": ">=7.3.0"
+        "php": ">=7.3.0",
+        "indieweb/mention-client": "^1.2"
     },
     "require-dev": {
         "getkirby/cms": "^3.6",
-        "phpunit/phpunit": "9.5"
+        "phpunit/phpunit": "^9.5"
     },
     "replace": {
         "mauricerenck/tratschtante": "*"
@@ -38,6 +40,11 @@
     "scripts": {
         "test": "vendor/bin/phpunit --testdox tests",
         "build-test-package": "git archive HEAD -o indieConnector.zip --worktree-attributes",
-        "build-composer": "composer install --no-dev --optimize-autoloader"
+        "build-composer": "composer install --no-dev --optimize-autoloader",
+        "build-release": [
+            "composer test",
+            "composer install --no-dev --optimize-autoloader",
+            "npm run build"
+        ]
     }
 }
