--- a/.gitattributes
+++ b/.gitattributes
@@ -3,6 +3,7 @@
 /src/ export-ignore
 /media/ export-ignore
 /tests/ export-ignore
+/.github/ export-ignore
 
 /.editorconfig export-ignore
 /.gitattributes export-ignore
