--- a/site/blueprints/pages/default.yml
+++ b/site/blueprints/pages/default.yml
@@ -1,1 +1,33 @@
-fields:
+options:
+    changeSlug: false
+    update: true
+
+sections:
+    phpunit:
+        type: fields
+        fields:
+            indieConnetor:
+                extends: indieconnector/fields/webmentions
+            description:
+                type: textarea
+                label: description
+            text:
+                type: textarea
+                label: Text
+            layouteditor:
+                type: layout
+                label: Layout
+            blockeditor:
+                type: blocks
+                label: Blocks
+            description:
+                type: text
+                label: Description
+            mastodonimage:
+                type: files
+                max: 1
+                label: Mastodon image
+    mediathek:
+        type: files
+    subpages:
+        type: pages
