chore: bluesky api package

--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,8 @@
         "php": ">=8.0.0",
         "indieweb/mention-client": "^1.2",
         "ext-curl": "*",
-        "mf2/mf2": "^0.5.0"
+        "mf2/mf2": "^0.5.0",
+        "cjrasmussen/bluesky-api": "^2.0"
     },
     "require-dev": {
         "getkirby/cms": "^4",
