--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "author": "Maurice Renck",
     "private": true,
     "scripts": {
-        "dev": "npx -y kirbyup src/index.js --watch",
+        "dev": "npx -y kirbyup serve src/index.js",
         "build": "npx -y kirbyup src/index.js"
     },
     "posthtml": {
