fix: merge and keep retry count

--- a/site/blueprints/pages/default.yml
+++ b/site/blueprints/pages/default.yml
@@ -11,7 +11,7 @@ sections:
             description:
                 type: textarea
                 label: description
-            text:
+            textfield:
                 type: textarea
                 label: Text
             layouteditor:
