feat: native webmentions (#13)
* feat: receive webmentions without external service

BREAKING CHANGE:
- rewrite of receive classes and tests

* feat: stats enabled option

BREAKING CHANGE: the configuration stats = true has been moved to stats.enabled = true

* feat: split data into webmention hooks

* feat: webmention queue

* feat: process queue

* feat: urlcheck class

* feat: page checks class

* feat: database class

* feat: outsourced webmention io specific code

* feat: mastodon posting

* feat: post images

* feat: block templates

* feat: disable per page

* feat: configure status length

* feat: handle deleted pages

* feat: paginated tables in panel view

* feat: disable migrations

* feat: mastodon url panel field

* feat: block source urls in config

* feat: check for disabled webmentions on page level

* feat: kirbytags for like, bookmark, repost, reply

* feat: disable posting to mastodon on page level

* feat: post to bluesky

* feat: endpoint snippet

* feat: updated outbox format

BREAKING CHANGE: feat: save status of external posts

* feat: mastodon url page method

* feat: check bsky and mastodon urls and do not send again

* feat: stat view updates

* fix: stats option keeping donottrack in mind

* fix: localurl checks

* fix: use uri instead of slug for full path

* fix: 410 route

* fix: mastodon sender enable had wrong init value

* fix: adapt to webmentions.rock tests

* improvement: hook - detect urls once

* improvement: microformat detection and tests

* improvement: robust author field getters

* improvement: show author and page title in stats

* improvement: stats now check if the webmention is an update and doesnt count twice

* improvement: mastodon sender with new options

* improvement: new option structure

* improvement: moved routes into separate file

* improvement: stats

* improvement: use ktable component

--- a/blueprints/fields/block-webmentions.yml
+++ b/blueprints/fields/block-webmentions.yml
@@ -1,11 +1,26 @@
 type: group
 fields:
-  webmentionsStatus:
-    label: Webmentions
-    type: toggle
-    default: true
-    text:
-      - en: Webmentions deactivated
-        de: Webmentions deaktiviert
-      - en: Webmentions active
-        de: Webmentions aktiviert
+    webmentionsStatus:
+        label: Webmentions
+        type: toggle
+        default: true
+        width: 1/3
+        text:
+            - en: Webmentions deactivated
+              de: Webmentions deaktiviert
+            - en: Webmentions active
+              de: Webmentions aktiviert
+    enableExternalPosting:
+        label: External Posting
+        type: toggle
+        default: true
+        width: 1/3
+        text:
+            - en: Posting deactivated
+              de: Nicht woanders posten
+            - en: Posting enabled
+              de: Woanders posten
+    mastodonStatusUrl:
+        label: Mastodon URL
+        type: url
+        width: 1/3
