--- a/.editorconfig
+++ b/.editorconfig
@@ -1,7 +1,7 @@
 [*.{css,scss,less,js,json,ts,sass,html,hbs,mustache,phtml,html.twig,md,yml}]
 charset = utf-8
 indent_style = space
-indent_size = 2
+indent_size = 4
 end_of_line = lf
 insert_final_newline = true
 trim_trailing_whitespace = true
@@ -11,11 +11,8 @@ insert_final_newline = true
 indent_size = 4
 trim_trailing_whitespace = false
 
-[site/templates/**.php]
-indent_size = 2
-
-[site/snippets/**.php]
-indent_size = 2
+[*.php]
+indent_size = 4
 
 [package.json,.{babelrc,editorconfig,eslintrc,lintstagedrc,stylelintrc}]
 indent_style = space
