--- a/blueprints/fields/block-webmentions.yml
+++ b/blueprints/fields/block-webmentions.yml
@@ -6,20 +6,20 @@ fields:
         default: true
         width: 1/3
         text:
-            - en: Webmentions deactivated
-              de: Webmentions deaktiviert
-            - en: Webmentions active
-              de: Webmentions aktiviert
+            - en: Inactive
+              de: Inaktiv
+            - en: Active
+              de: Aktiv
     enableExternalPosting:
         label: External Posting
         type: toggle
         default: true
         width: 1/3
         text:
-            - en: Posting deactivated
-              de: Nicht woanders posten
-            - en: Posting enabled
-              de: Woanders posten
+            - en: Inactive
+              de: Inaktiv
+            - en: Active
+              de: Aktiv
     mastodonStatusUrl:
         label: Mastodon URL
         type: url
