fix: prevent timing issue when writing multiple posts to outbox #18
fix: force image generation on resized images #19 and #20  (thank you @diplix)

--- a/site/blueprints/pages/phpunit.yml
+++ b/site/blueprints/pages/phpunit.yml
@@ -1,19 +1,25 @@
 options:
-  changeSlug: false
-  update: true
+    changeSlug: false
+    update: true
 
 sections:
-  phpunit:
-    type: fields
-    fields:
-      indieConnetor:
-        extends: indieconnector/fields/webmentions
-      textfield:
-        type: textarea
-        label: Text
-      layouteditor:
-        type: layout
-        label: Layout
-      blockeditor:
-        type: blocks
-        label: Blocks
+    phpunit:
+        type: fields
+        fields:
+            indieConnetor:
+                extends: indieconnector/fields/webmentions
+            mastoText:
+                type: textarea
+                label: Mastodon Text
+            mastodonimage:
+                type: files
+                label: Mastodon Image
+            textfield:
+                type: textarea
+                label: Text
+            layouteditor:
+                type: layout
+                label: Layout
+            blockeditor:
+                type: blocks
+                label: Blocks
