--- a/blueprints/fields/block-webmentions.yml
+++ b/blueprints/fields/block-webmentions.yml
@@ -14,3 +14,7 @@ fields:
         label: Mastodon URL
         type: url
         width: 1/3
+    blueskyStatusUrl:
+        label: Bluesky URL
+        type: url
+        width: 1/3
