feat: use tags from tagfield when posting #28
closes #30

--- a/site/blueprints/pages/default.yml
+++ b/site/blueprints/pages/default.yml
@@ -22,6 +22,9 @@ sections:
             textfield:
                 type: textarea
                 label: Text
+            postTags:
+                type: tags
+                label: Mastodon Tags
             layouteditor:
                 type: layout
                 label: Layout
